// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SEO component renders correctly 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
  meta={
    Array [
      Object {
        "content": "description-mock",
        "name": "description",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "title-mock",
        "property": "og:title",
      },
      Object {
        "content": "description-mock",
        "property": "og:description",
      },
      Object {
        "content": "https://nodejs.dev/",
        "property": "og:url",
      },
      Object {
        "content": "title-mock",
        "property": "og:site_name",
      },
      Object {
        "content": "Node.js",
        "property": "article:section",
      },
      Object {
        "content": "image/png",
        "property": "og:image:type",
      },
      Object {
        "content": "224",
        "property": "og:image:width",
      },
      Object {
        "content": "256",
        "property": "og:image:height",
      },
      Object {
        "content": "image-mock",
        "property": "og:image",
      },
      Object {
        "content": "image-mock",
        "property": "og:image:secure_url",
      },
      Object {
        "content": "https://www.facebook.com/nodejsfoundation/",
        "property": "article:author",
      },
      Object {
        "content": "https://www.facebook.com/nodejsfoundation/",
        "property": "article:publisher",
      },
      Object {
        "content": "https://nodejs.dev/",
        "name": "twitter:url",
      },
      Object {
        "content": "@nodejs",
        "name": "twitter:creator",
      },
      Object {
        "content": "@nodejs",
        "name": "twitter:site",
      },
      Object {
        "content": "title-mock",
        "name": "twitter:title",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
      Object {
        "content": "image-mock",
        "name": "twitter:image",
      },
      Object {
        "content": "The Node.js Hexagon Logo",
        "name": "twitter:image:alt",
      },
      Object {
        "content": "description-mock",
        "name": "twitter:description",
      },
    ]
  }
  title="title-mock"
>
  <html
    lang="en"
  />
</HelmetWrapper>
`;

exports[`SEO component uses config properties as fallback for missing props 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
  meta={
    Array [
      Object {
        "content": "Node.js® is a JavaScript runtime built on Chrome's V8 JavaScript engine.",
        "name": "description",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "Node.js",
        "property": "og:title",
      },
      Object {
        "content": "Node.js® is a JavaScript runtime built on Chrome's V8 JavaScript engine.",
        "property": "og:description",
      },
      Object {
        "content": "https://nodejs.dev/",
        "property": "og:url",
      },
      Object {
        "content": "Node.js",
        "property": "og:site_name",
      },
      Object {
        "content": "Node.js",
        "property": "article:section",
      },
      Object {
        "content": "image/png",
        "property": "og:image:type",
      },
      Object {
        "content": "224",
        "property": "og:image:width",
      },
      Object {
        "content": "256",
        "property": "og:image:height",
      },
      Object {
        "content": "https://nodejs.org/static/images/logo-hexagon-card.png",
        "property": "og:image",
      },
      Object {
        "content": "https://nodejs.org/static/images/logo-hexagon-card.png",
        "property": "og:image:secure_url",
      },
      Object {
        "content": "https://www.facebook.com/nodejsfoundation/",
        "property": "article:author",
      },
      Object {
        "content": "https://www.facebook.com/nodejsfoundation/",
        "property": "article:publisher",
      },
      Object {
        "content": "https://nodejs.dev/",
        "name": "twitter:url",
      },
      Object {
        "content": "@nodejs",
        "name": "twitter:creator",
      },
      Object {
        "content": "@nodejs",
        "name": "twitter:site",
      },
      Object {
        "content": "Node.js",
        "name": "twitter:title",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
      Object {
        "content": "https://nodejs.org/static/images/logo-hexagon-card.png",
        "name": "twitter:image",
      },
      Object {
        "content": "The Node.js Hexagon Logo",
        "name": "twitter:image:alt",
      },
      Object {
        "content": "Node.js® is a JavaScript runtime built on Chrome's V8 JavaScript engine.",
        "name": "twitter:description",
      },
    ]
  }
  title="Node.js"
>
  <html
    lang="en"
  />
</HelmetWrapper>
`;
